Allow the user to customise the cron schedule
Cherry-picked from 6faa89fe4aaa92a1c8e4a13c99885191015f2768 upstream.

--- a/pillar.example
+++ b/pillar.example
@@ -16,4 +16,7 @@ letsencrypt:
       - mail.example.com
     intranet:
       - intranet.example.com
-
+  cron:
+    minute: 10
+    hour: 2
+    dayweek: 1
